# BRAINet

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  binary_cnn_model.md  binary_cnn_model.py  check_layers.py  dataset_preprocessing.py  evaluate_binary_cnn.py  evaluate_resnet18_layer4_fc.py  evaluate_resnet_binary.py  gradcam_pp.py  h5_file_viewer.py  requirements.txt  train_binary_cnn.py  train_resnet_binary.py
.github/workflows/: python-app.yml
app/: inference.py  main.py  model_loader.py
app/docs/: inference.md  main.md  model_loader.md
backend/: requirements.txt
backend/app/: main.py  models.py  schemas.py
classification_binary/: quantize_and_compare.py
classification_binary/docs/: binary_cnn_model.md  dataset_preprocessing.md  evaluate_binary_cnn.md  evaluate_resnet18_layer4_fc.md  evaluate_resnet_binary.md  (+2 more)
classification_multi_class/: evaluate_multi_class.py  multi_class_cnn_model.py  multi_class_dataset_preprocessing.py  train_multi_class_cnn.py  train_multi_class_resnet.py
docs/: check_layers.md  dataset_preprocessing.md  evaluate_binary_cnn.md  evaluate_resnet18_layer4_fc.md  evaluate_resnet_binary.md  train_binary_cnn.md  train_resnet_binary.md
edge_inference/: CMakeLists.txt  Dockerfile  main.cpp
frontend/: DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
onnx/: convert_onnx_fp16.py  evaluate_onnx_models.py  export_onnx.py  quantization_analysis.md
segmentation_with_unet/: evaluate_unet.py  loss_functions.py  segmentation_dataset_preprocessing.py  train_unet.py  unet_model.py
(+21 files in other folders)
